--- a/public_src/css/login-view.css
+++ b/public_src/css/login-view.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 62.5%;
+}
+
 body {
     margin: 0;
     -moz-user-select: none;
@@ -9,9 +13,9 @@ body {
 
 .change-button {
     text-align: center;
-    line-height: 75px;
-    width: 150px;
-    height: 150px;
+    line-height: 7.5rem;
+    width: 15rem;
+    height: 15rem;
     background-color: rgb(22, 22, 22);
     top: 0;
     right: 0;
@@ -29,7 +33,7 @@ body {
 }
 
 .change-button p {
-    font-size: 35px;
+    font-size: 3.5rem;
     color: #ffffff;
     -ms-transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
@@ -45,47 +49,61 @@ body {
 }*/
 
 .half-view {
+    height: 100%;
+    margin: 0;
+    border: 0;
     display: flex;
     flex-direction: row;
 }
 
 .sign-in-container {
+    display: flex;
     width: 50%;
     height: 100%;
     background-color: rgb(22, 22, 22);
     margin: 0;
+    align-items: center;
+    justify-content: center;
 }
 
 .sign-up-container {
+    display: flex;
     width: 50%;
     height: 100%;
     background-color: rgb(0, 219, 139);
     margin: 0;
+    align-items: center;
+    /* 垂直居中 */
+    justify-content: center;
+    /* 水平居中 */
+    /*-webkit-animation: widthChange 1.5s;*/
+    /*display: none;*/
 }
 
 .form-container-sign-in {
-    margin: 200px auto;
     text-align: center;
-    width: 40%;
+    width: 40rem;
+    height: 35rem;
     -webkit-animation: alphaChange 2.5s;
 }
 
 .form-container-sign-in p {
-    font-size: 20px;
+    font-size: 2rem;
     color: #ffffff;
     cursor: default;
 }
 
 .sign-in-button {
-    width: 300px;
-    height: 50px;
-    margin-top: 50px;
-    border-radius: 5px;
+    width: 30rem;
+    height: 5rem;
+    margin-top: 5rem;
+    border-radius: 0.5rem;
     border: 0;
     outline: none;
     background-color: rgb(0, 219, 139);
-    font-size: 25px;
+    font-size: 2.5rem;
     color: #000000;
+    cursor: pointer;
     /*font-weight: bold;*/
 }
 
@@ -94,57 +112,59 @@ body {
 }
 
 .text-box {
-    width: 300px;
-    height: 50px;
-    font-size: 20px;
+    width: 30rem;
+    height: 5rem;
+    font-size: 2rem;
     border: 0;
-    border-radius: 5px;
+    border-radius: 0.5rem;
     outline: none;
-    text-indent: 10px;
+    text-indent: 1rem;
 }
 
 .text-container-left {
+    width: 40rem;
     text-align: center;
-    margin: 30% 20%;
     -webkit-animation: alphaChange 2.5s;
 }
 
 .text-container-left h1 {
-    font-size: 40px;
+    font-size: 4rem;
     color: #ffffff;
     cursor: default;
 }
 
 .text-container-left p {
-    font-size: 25px;
+    font-size: 2.5rem;
     color: #ffffff;
     cursor: default;
 }
 
 .form-container-sign-up {
-    margin: 150px auto;
+    margin: 0 auto;
     text-align: center;
-    width: 40%;
+    width: 40rem;
+    height: 60rem;
     -webkit-animation: alphaChange 2.5s;
     display: none;
 }
 
 .form-container-sign-up p {
-    font-size: 20px;
+    font-size: 2rem;
     color: #000000;
     cursor: default;
 }
 
 .sign-up-button {
-    width: 300px;
-    height: 50px;
-    margin-top: 50px;
-    border-radius: 5px;
+    width: 30rem;
+    height: 5rem;
+    margin-top: 5rem;
+    border-radius: 0.5rem;
     border: 0;
     outline: none;
     background-color: rgb(22, 22, 22);
-    font-size: 25px;
+    font-size: 2.5rem;
     color: #ffffff;
+    cursor: pointer;
     /*font-weight: bold;*/
 }
 
@@ -154,18 +174,18 @@ body {
 
 .text-container-right {
     text-align: center;
-    margin: 30% 20%;
+    width: 40rem;
     -webkit-animation: alphaChange 2.5s;
 }
 
 .text-container-right h1 {
-    font-size: 40px;
+    font-size: 4rem;
     color: #000000;
     cursor: default;
 }
 
 .text-container-right p {
-    font-size: 25px;
+    font-size: 2.5rem;
     color: #000000;
     cursor: default;
 }
@@ -176,5 +196,14 @@ body {
     }
     to {
         opacity: 1;
+    }
+}
+
+@-webkit-keyframes widthChange {
+    0% {
+        width: 10%;
+    }
+    100% {
+        width: 50%;
     }
 }
