--- a/public_src/css/main-view.css
+++ b/public_src/css/main-view.css
@@ -90,6 +90,7 @@ body {
 
 .article-stack-view {
     width: 60%;
+    min-height: 100%;
     /*background-color: rgb(27, 27, 27);*/
     background-image: url('../image/background.jpg');
     background-repeat: repeat;
