--- a/blog-app/src/assets/styles/base.scss
+++ b/blog-app/src/assets/styles/base.scss
@@ -10,7 +10,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: '微软雅黑';
+  font-family: 'Microsoft Yahei';
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
