--- a/public_src/css/login-view.css
+++ b/public_src/css/login-view.css
@@ -53,7 +53,7 @@ body {
     margin: 0;
     border: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
 }
 
 .sign-in-container {
@@ -76,7 +76,8 @@ body {
     /* 垂直居中 */
     justify-content: center;
     /* 水平居中 */
-    /*-webkit-animation: widthChange 1.5s;*/
+    -webkit-animation: widthChange 1.5s;
+    overflow: hidden;
     /*display: none;*/
 }
 
@@ -201,7 +202,7 @@ body {
 
 @-webkit-keyframes widthChange {
     0% {
-        width: 10%;
+        width: 0%;
     }
     100% {
         width: 50%;
