--- a/public_src/css/main-view.css
+++ b/public_src/css/main-view.css
@@ -3,8 +3,12 @@ html {
 }
 
 body {
-    margin: 0;
+    width: 1366px;
+    margin: 0 auto;
     padding: 0;
+    background-image: url('../image/background.jpg');
+    background-repeat: repeat;
+    background-attachment: fixed;
 }
 
 .main-view-div {
@@ -13,8 +17,8 @@ body {
 }
 
 .navigation {
-    width: 40%;
-    height: 6rem;
+    width: 546px;
+    height: 60px;
     position: fixed;
     top: 0;
     left: 0;
@@ -26,8 +30,8 @@ body {
 }
 
 .navigation div {
-    width: 10rem;
-    height: 5.5rem;
+    width: 100px;
+    height: 55px;
     font-size: 1.6rem;
     font-weight: bold;
     color: #fff;
@@ -35,25 +39,25 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 0.5rem solid transparent;
+    border-bottom: 5px solid transparent;
 }
 
 .navigation div:hover {
     color: #008f5b;
-    border-bottom: 0.5rem solid #008f5b;
+    border-bottom: 5px solid #008f5b;
 }
 
 .information-box {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 40%;
+    width: 546px;
     height: 100%;
     background-color: rgb(0, 219, 139);
     position: fixed;
     top: 0;
     left: 0;
-    box-shadow: 1rem 0 2rem #000;
+    box-shadow: 10px 0 20px #000;
 }
 
 .information-box-container {
@@ -62,12 +66,12 @@ body {
 }
 
 .user-head-picture-box {
-    width: 30rem;
-    height: 30rem;
-    margin: 10rem auto 0 auto;
+    width: 300px;
+    height: 300px;
+    margin: 100px auto 0 auto;
     background-color: #000;
-    border: 1rem solid #fff;
-    box-shadow: 0 0 1rem #000;
+    border: 10px solid #fff;
+    box-shadow: 0 0 10px #000;
 }
 
 .user-head-picture-box img {
@@ -75,56 +79,54 @@ body {
 }
 
 .user-introduction {
-    width: 32rem;
+    width: 320px;
     cursor: default;
     user-select: none;
 }
 
 .user-introduction h1 {
-    font-size: 3rem;
+    font-size: 2.4rem;
 }
 
 .user-introduction p {
-    font-size: 2rem;
+    font-size: 1.6rem;
 }
 
 .article-stack-view {
-    width: 60%;
+    width: 826px;
     min-height: 100%;
     /*background-color: rgb(27, 27, 27);*/
-    background-image: url('../image/background.jpg');
-    background-repeat: repeat;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    padding-bottom: 6rem;
+    padding-bottom: 60px;
     padding-top: 20px;
 }
 
 .article-box {
-    width: 68rem;
-    height: 30rem;
+    width: 680px;
+    height: 300px;
     margin: 0;
     display: flex;
     flex-direction: row;
-    margin-top: 4rem;
+    margin-top: 40px;
 }
 
 .article-box-container {
-    width: 62rem;
-    height: 30rem;
+    width: 620px;
+    height: 300px;
     background-color: rgb(0, 219, 139);
     display: flex;
     flex-direction: row;
-    box-shadow: 1rem 1rem 2rem #000;
+    box-shadow: 10px 10px 20px #000;
     cursor: pointer;
     user-select: none;
 }
 
 .image-div {
-    width: 30rem;
-    height: 30rem;
+    width: 300px;
+    height: 300px;
 }
 
 .image-div img {
@@ -132,26 +134,46 @@ body {
 }
 
 .article-text-box {
-    width: 32rem;
-    height: 30rem;
+    width: 320px;
+    height: 300px;
 }
 
 .article-text-box h1 {
-    font-size: 3.5rem;
+    font-size: 3.6rem;
     font-weight: bold;
-    margin: 2rem 2rem 0 2rem;
+    width: 280px;
+    height: 60px;
+    line-height: 60px;
+    margin: 10px 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .article-text-box h2 {
-    font-size: 2rem;
+    font-size: 1.6rem;
     font-weight: bold;
     color: rgb(117, 117, 117);
-    margin: 0.5rem 2rem 0 2rem;
+    width: 280px;
+    height: 30px;
+    line-height: 30px;
+    margin: 10px 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .article-text-box p {
-    font-size: 2rem;
-    margin: 0.5rem 2rem 0 2rem;
+    font-size: 1.6rem;
+    width: 280px;
+    height: 150px;
+    line-height: 25px;
+    margin: 10px 20px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 6;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .article-box-navigation {
@@ -166,8 +188,8 @@ body {
 }
 
 .article-box-navigation div {
-    width: 5rem;
-    height: 7.5rem;
+    width: 50px;
+    height: 75px;
     background-color: rgb(0, 219, 139);
     display: flex;
     flex-direction: column;
@@ -177,7 +199,7 @@ body {
 }
 
 .article-box-navigation p {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     margin: 0;
     cursor: default;
 }
