--- a/public_src/css/main-view.css
+++ b/public_src/css/main-view.css
@@ -27,6 +27,7 @@ body {
     align-items: center;
     justify-content: space-between;
     background-color: rgb(0, 219, 139);
+    /*display: none;*/
 }
 
 .navigation div {
@@ -47,6 +48,43 @@ body {
     border-bottom: 5px solid #008f5b;
 }
 
+.navigation-column {
+    width: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: rgb(0, 219, 139);
+    position: fixed;
+    left: 0;
+    top: 0;
+    margin: 0;
+}
+
+.navigation-column div:hover {
+    color: #008f5b;
+    background-color: #3fff7a;
+}
+
+.navigation-column div {
+    width: 60px;
+    height: 100px;
+    margin: 0;
+    font-size: 1.6rem;
+    font-weight: bold;
+    color: #fff;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.information-box-push-button {
+    width: 60px;
+    height: 100px;
+    background-color: #008f5b;
+}
+
 .information-box {
     display: flex;
     flex-direction: column;
@@ -63,6 +101,7 @@ body {
 .information-box-container {
     display: flex;
     flex-direction: column;
+    /*display: none;*/
 }
 
 .user-head-picture-box {
@@ -206,4 +245,13 @@ body {
 
 .article-box-navigation img:hover {
     cursor: pointer;
+}
+
+@-webkit-keyframes widthChange {
+    0% {
+        width: 546px;
+    }
+    100% {
+        width: 0;
+    }
 }
