--- a/public_src/css/main-view.css
+++ b/public_src/css/main-view.css
@@ -59,6 +59,7 @@ body {
     left: 0;
     top: 0;
     margin: 0;
+    box-shadow: 10px 0 20px #000;
 }
 
 .navigation-column div:hover {
@@ -86,9 +87,6 @@ body {
 }
 
 .information-box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     width: 546px;
     height: 100%;
     background-color: rgb(0, 219, 139);
@@ -98,10 +96,15 @@ body {
     box-shadow: 10px 0 20px #000;
 }
 
-.information-box-container {
+.navigation-column-push-button {
+    width: 60px;
+    height: 100%;
+    background-color: rgb(0, 219, 139);
+    float: right;
     display: flex;
-    flex-direction: column;
-    /*display: none;*/
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
 .user-head-picture-box {
@@ -121,6 +124,7 @@ body {
     width: 320px;
     cursor: default;
     user-select: none;
+    margin: 0 auto;
 }
 
 .user-introduction h1 {
