--- a/public_src/css/navigation-view.css
+++ b/public_src/css/navigation-view.css
@@ -20,6 +20,7 @@
     font-weight: bold;
     color: #fff;
     cursor: pointer;
+    user-select: none;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -100,4 +101,19 @@
     background-color: #000;
     border: 10px solid #fff;
     box-shadow: 0 0 10px #000;
+}
+
+.container-shelter {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    background-color: #000;
+    opacity: 0.6;
+    display: none;
+    position: absolute;
+    z-index: 3;
 }
