--- a/app/src/assets/styles/base.scss
+++ b/app/src/assets/styles/base.scss
@@ -1,30 +1,21 @@
-
 html {
+  font-size: 62.5%;
   width: 100%;
   height: 100%;
-  font-size: 62.5%;
 }
 
 body {
-  width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
   font-family: 'Microsoft Yahei';
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  -khtml-user-select: none;
-  user-select: none;
 }
 
-.container {
-  width: 100%;
-  height: 100%;
+#app, .container {
   margin: 0;
-}
-
-#app {
+  padding: 0;
   width: 100%;
   height: 100%;
+  min-width: 1200px;
 }
