--- a/app/src/assets/styles/home.scss
+++ b/app/src/assets/styles/home.scss
@@ -1,16 +1,24 @@
 @import './base.scss';
 
 .home-view {
-  min-height: 100%;
   display: flex;
+  overflow: auto;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-width: 1200px;
   flex-direction: row-reverse;
+  background-image: url('../images/background.jpg');
+  background-repeat: repeat;
+  background-attachment: fixed;
 }
 
 .information-box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 40%;
+  width: 30%;
+  min-width: 400px;
   height: 100%;
   background-color: rgb(0, 219, 139);
   position: fixed;
@@ -19,16 +27,21 @@
   box-shadow: 1rem 0 2rem #000;
 }
 
-.article-stack-view {
-  width: 60%;
-  min-height: 100%;
-  background-image: url('../images/background.jpg');
-  background-repeat: repeat;
-  background-attachment: fixed;
+.article-layout {
+  width: 70%;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  padding-bottom: 6rem;
-  padding-top: 2rem;
+  margin-left: 30%;
+  .article-stack-view {
+    width: 826px;
+    display: flex;
+    overflow: auto;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 60px;
+    padding-top: 20px;
+  }
 }
+
