--- a/app/src/assets/styles/home.scss
+++ b/app/src/assets/styles/home.scss
@@ -27,7 +27,7 @@
   box-shadow: 1rem 0 2rem #000;
 }
 
-.article-layout {
+.content-layout {
   width: 70%;
   overflow: auto;
   display: flex;
@@ -45,3 +45,12 @@
   }
 }
 
+.content-bar-layout {
+  width: 97%;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 10%;
+  padding: 50px;
+}
