--- a/app/src/assets/styles/base.scss
+++ b/app/src/assets/styles/base.scss
@@ -19,3 +19,29 @@ body {
   height: 100%;
   min-width: 1200px;
 }
+
+.child-view {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.button {
+  width: 120px;
+  height: 40px;
+  border-radius: 5px;
+  border: 2px outset #008f5b;
+  background-color: rgb(0, 219, 139);
+  font-size: 1.5rem;
+  font-weight: bold;
+  outline: none;
+  box-sizing: border-box;
+  &:active {
+    background-color: #008f5b;
+  }
+}
