--- a/app/src/assets/styles/home.scss
+++ b/app/src/assets/styles/home.scss
@@ -27,6 +27,13 @@
   box-shadow: 1rem 0 2rem #000;
 }
 
+.fade-enter-active, .fade-leave-active {
+  transition: opacity 1s
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active 在 <2.1.8 中 */ {
+  opacity: 0
+}
+
 .content-layout {
   width: 70%;
   overflow: auto;
