--- a/app/src/assets/styles/home.scss
+++ b/app/src/assets/styles/home.scss
@@ -42,12 +42,13 @@
 }
 
 .article-stack-view {
+  position: relative;
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
+  align-items: center;
   justify-content:center;
-  padding-bottom: 60px;
+  padding-bottom: 200px;
 }
 
 .content-bar-layout {
