--- a/app/src/assets/styles/home.scss
+++ b/app/src/assets/styles/home.scss
@@ -45,7 +45,7 @@
   position: relative;
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content:center;
   padding-bottom: 200px;
