--- a/app/src/assets/styles/publish.scss
+++ b/app/src/assets/styles/publish.scss
@@ -4,13 +4,14 @@
   text-align: center;
   .title-submit-box {
     display: flex;
+    margin: 0 auto;
     width: 1000px;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     .title-text {
-      width: 1000px;
+      width: 800px;
       height: 40px;
       padding: 10px;
       box-sizing: border-box;
@@ -18,11 +19,26 @@
       font-size: 2rem;
       text-indent: 5px;
       border-radius: 5px;
-      margin-right: 20px;
       border: 2px solid rgb(126, 126, 126);
       &:focus {
         border: 2px solid rgb(0, 219, 139);
       }
+    }
+  }
+  .subtitle-text {
+    width: 1000px;
+    box-sizing: border-box;
+    height: 40px;
+    padding: 10px;
+    box-sizing: border-box;
+    outline: none;
+    font-size: 2rem;
+    text-indent: 5px;
+    border-radius: 5px;
+    border: 2px solid rgb(126, 126, 126);
+    margin-bottom: 20px;
+    &:focus {
+      border: 2px solid rgb(0, 219, 139);
     }
   }
   .text-box {
@@ -43,6 +59,7 @@
   }
   .label-view {
     display: flex;
+    width: 1000px;
     flex-direction: row;
     margin: 30px auto;
   }
