adjust the animation time

--- a/app/src/assets/styles/home.scss
+++ b/app/src/assets/styles/home.scss
@@ -28,9 +28,9 @@
 }
 
 .fade-enter-active, .fade-leave-active {
-  transition: opacity 1s
+  transition: opacity 0.5s
 }
-.fade-enter, .fade-leave-to /* .fade-leave-active 在 <2.1.8 中 */ {
+.fade-enter, .fade-leave-to {
   opacity: 0
 }
 
