add github setting

--- a/app/src/assets/styles/setting.scss
+++ b/app/src/assets/styles/setting.scss
@@ -7,13 +7,12 @@
     width: 1000px;
     display: flex;
     flex-direction: row;
-    margin: 40px 0;
     div {
       margin: 0 40px;
     }
     .head-picture-box {
-      width: 300px;
-      height: 300px;
+      width: 200px;
+      height: 200px;
       box-sizing: border-box;
       background-color: #000;
       border: 10px solid #fff;
@@ -24,8 +23,8 @@
       }
     }
     .textarea {
-      width: 540px;
-      height: 300px;
+      width: 640px;
+      height: 200px;
       box-sizing: border-box;
       border-radius: 5px;
       outline: none;
@@ -41,19 +40,19 @@
 .information-setting-view {
   margin: 40px;
   .a-line-display {
-    height: 40px;
+    height: 30px;
     display: flex;
     flex-direction: row;
     margin-bottom: 30px;
     div {
       width: 200px;
-      height: 40px;
+      height: 30px;
       margin: 0;
-      line-height: 40px;
+      line-height: 1.5;
     }
     .text-box {
       width: 800px;
-      height: 40px;
+      height: 30px;
       font-size: 2rem;
       text-indent: 5px;
       box-sizing: border-box;
