--- a/app/src/assets/styles/setting.scss
+++ b/app/src/assets/styles/setting.scss
@@ -7,10 +7,11 @@
     width: 1000px;
     display: flex;
     flex-direction: row;
-    div {
+    > div {
       margin: 0 40px;
     }
     .head-picture-box {
+      position: relative;
       width: 200px;
       height: 200px;
       box-sizing: border-box;
@@ -20,6 +21,11 @@
       user-select: none;
       img {
         width: 100%;
+      }
+      .file-upload {
+        position: absolute;
+        bottom: 0;
+        right: 0;
       }
     }
     .textarea {
